--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -157,7 +157,8 @@
                         <a class="nav-link dropdown-toggle" href="#" id="theme_dropdown" data-bs-toggle="dropdown" aria-expanded="false">Themes</a>
                         <ul class="dropdown-menu dropdown-menu-dark controls" aria-labelledby="theme_dropdown">
                             <li><a class="controls dropdown-item" data-theme="default">Default</a></li>
-                            <li><a class="controls dropdown-item" data-theme="banana">Funny banana</a></li>
+                            <li><a class="controls dropdown-item" data-theme="uglybanana">Funny banana</a></li>
+                            <li><a class="controls dropdown-item" data-theme="banana">Pretty banana</a></li>
                             <li><a class="controls dropdown-item" data-theme="cherry" disabled>Hot cherry</a></li>
                             <li><a class="controls dropdown-item" data-theme="sop">Shades of Purple</a></li>
                             <li><a class="controls dropdown-item" data-theme="leaf">Smooth leaf</a></li>
