--- a/blog/templates/blog/includes/aside_nav_post_info.html
+++ b/blog/templates/blog/includes/aside_nav_post_info.html
@@ -22,6 +22,9 @@
         {% if post.published_date %}
             Published: {{ post.published_date|date:'l, d F Y H:m:s' }}
         {% endif %}
+        {% if post.modified_date %}
+            Updated: {{ post.modified_date|date:'l, d F Y H:m:s' }}
+        {% endif %}
     </p>
     <p>
         {% if post.featured_title %}
