--- a/khoBlog/templates/base.html
+++ b/khoBlog/templates/base.html
@@ -223,7 +223,7 @@
         <div class="container-fluid">
             <div class="row align-items-center">
                 <div class="col-sm">
-                    <a class="btn btn-dark btn-outline-light" href="{% url 'blog:category_list' %}">
+                    <a class="btn btn-outline-primary" href="{% url 'blog:category_list' %}">
                         Category List
                     </a>
                 </div>
@@ -235,7 +235,7 @@
                 </div>
 
                 <div class="col-sm">
-                    <a class="btn btn-dark btn-outline-light" href="{% url 'blog:latest' %}">
+                    <a class="btn btn-outline-primary" href="{% url 'blog:latest' %}">
                         Latest Post
                     </a>
                 </div>
