--- a/khoBlog/templates/includes/nav/nav_auth.html
+++ b/khoBlog/templates/includes/nav/nav_auth.html
@@ -1,50 +1,45 @@
 {% load socialaccount %}
-{% load users_set %}
 
-<div class="card p-4 mb-2 rounded shadow">
-    {% setting users %}
-    {% if user.is_authenticated %}
-        <p>{% firstof user.welcome_message 'Hello' %} <span class="{% if user.is_superuser %}superuser{% elif user.is_staff %}staff{% endif %}">{{ user.username }}</span></p>
-        <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Accounts">
-            <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
-            <a class="mb-0 btn btn-primary" href="{% url 'accounts:profile' slug=user.slug %}">Profile Page</a>
+{% if context.user.is_authenticated %}
+    <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Accounts">
+        <a class="mb-0 btn btn-primary" href="{% url 'account_logout' %}">Log out</a>
+        <a class="mb-0 btn btn-primary" href="{% url 'accounts:profile' slug=context.user.slug %}">Profile Page</a>
+    </div>
+
+    {% if context.user.is_superuser %}
+        <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Posts">
+            <a class="mb-0 btn btn-primary" href="{% url 'blog:post_new' %}">New Post</a>
+            <a class="mb-0 btn btn-primary" href="{% url 'blog:post_draft_list' %}">Drafts</a>
+            <a class="mb-0 btn btn-primary" href="{% url 'blog:post_scheduled_list' %}">Scheduled</a>
+            <a class="mb-0 btn btn-primary"
+                href="{% url 'blog:post_withdrawn_list' %}">Withdrawn</a>
         </div>
-
-        {% if user.is_superuser %}
-            <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Posts">
-                <a class="mb-0 btn btn-primary" href="{% url 'blog:post_new' %}">New Post</a>
-                <a class="mb-0 btn btn-primary" href="{% url 'blog:post_draft_list' %}">Drafts</a>
-                <a class="mb-0 btn btn-primary" href="{% url 'blog:post_scheduled_list' %}">Scheduled</a>
-                <a class="mb-0 btn btn-primary"
-                    href="{% url 'blog:post_withdrawn_list' %}">Withdrawn</a>
-            </div>
-        {% endif %}
-
-        <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Categories">
-            {% if user.is_superuser %}<a class="mb-0 btn btn-primary" href="{% url 'blog:category_new' %}">New Category</a>{% endif %}
-            <a class="mb-0 btn btn-primary" href="{% url 'blog:category_list' %}">Category List</a>
-        </div>
-
-        {% if user.is_superuser or user.is_staff %}
-            <div class="btn-group-vertical d-block" role="group" aria-label="Group Admin">
-                <a class="mb-0 btn btn-danger" href="{% url 'admin:index' %}">Admin</a>
-                {% if user.is_superuser %}
-                    <a class="btn btn-danger" href="{% url 'api-root' 'v1' %}">API V1</a>
-                    <a class="mb-0 btn btn-danger" href="https://eu.pythonanywhere.com">Pythonanywhere</a>
-                {% endif %}
-            </div>
-        {% endif %}
-
-    {% else %}
-        <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Account">
-            <a class="mb-0 btn btn-primary" href="{% url 'accounts:signup' %}">Sign up</a>
-            <a class="mb-0 btn btn-primary" href="{% url 'account_login' %}">Log in</a>
-        </div>
-
-        <div class="btn-group-vertical d-block" role="group" aria-label="Group Provider Account">
-            <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}"><i class="bi bi-google"></i></a>
-            <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}"><i class="bi bi-discord"></i></a>
-        </div>
-
     {% endif %}
-</div>
+
+    <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Categories">
+        {% if context.user.is_superuser %}<a class="mb-0 btn btn-primary" href="{% url 'blog:category_new' %}">New Category</a>{% endif %}
+        <a class="mb-0 btn btn-primary" href="{% url 'blog:category_list' %}">Category List</a>
+    </div>
+
+    {% if context.user.is_superuser or context.user.is_staff %}
+        <div class="btn-group-vertical d-block" role="group" aria-label="Group Admin">
+            <a class="mb-0 btn btn-danger" href="{% url 'admin:index' %}">Admin</a>
+            {% if context.user.is_superuser %}
+                <a class="btn btn-danger" href="{% url 'api-root' 'v1' %}">API V1</a>
+                <a class="mb-0 btn btn-danger" href="https://eu.pythonanywhere.com">Pythonanywhere</a>
+            {% endif %}
+        </div>
+    {% endif %}
+
+{% else %}
+    <div class="btn-group-vertical mb-2 d-block" role="group" aria-label="Group Account">
+        <a class="mb-0 btn btn-primary" href="{% url 'accounts:signup' %}">Sign up</a>
+        <a class="mb-0 btn btn-primary" href="{% url 'account_login' %}">Log in</a>
+    </div>
+
+    <div class="btn-group-vertical d-block" role="group" aria-label="Group Provider Account">
+        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'google' %}"><i class="bi bi-google"></i></a>
+        <a class="mb-0 btn btn-primary" href="{% provider_login_url 'discord' %}"><i class="bi bi-discord"></i></a>
+    </div>
+
+{% endif %}
