ordering cats and bug fix rel and urls

--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -73,3 +73,6 @@
 {% block inside_nav %}
     {% include 'blog/includes/aside_nav_post_info.html' %}
 {% endblock inside_nav %}
+
+{% block pagination %}
+{% endblock pagination %}
